@@ -1,32 +1,31 @@
-## Game > GameAnvil > Guide to Test Development > Get Started
+<!-- pre-align:aligned sig=3180aad95516 -->
 
-### Number
+<a id="game-gameanvil-guide-to-test-development-get-started"></a>
+## Game > GameAnvil > Guide to Test Development > Get Started { #game-gameanvil-guide-to-test-development-get-started }
 
-GameHammer is a performance and feature test tool that can be used after developing a game server using the GameAnvil engine. It can be tested using all the features provided by the actual connector in the same way, and can be used as running multiple GameHammers at the same time for stress tests, etc. You can check and save the progress during the test process or take the test final result together.
+<a id="overview"></a>
+### Overview { #overview }
 
-* Support all functions in the connector the same
-* Support both Sync/Async methods
-    * Provide API in the Async Method
-    * Provide Future for the Sync method
-* Allow you to use more than thousands of connections at the same time
-* Support status-based scenario management
+<!-- TODO: translate body -->
 
-This guide provides how to use GameHammer with detailed examples. It describes the use based on IntelliJ, like the server engine.
+<a id="supported-environment-and-protocol"></a>
+### Supported Environment and Protocol { #supported-environment-and-protocol }
 
-### Supported Environment and Protocol
-
+<a id="supported-environment-and-protocol-supported-network-protocol"></a>
 #### Supported Network Protocol
 
 * TCP/IP
 * SSL over TCP/IP
 
+<a id="supported-environment-and-protocol-available-application-protocol-format"></a>
 #### Available Application Protocol Format
 
 * Google Protocol Buffers
 * Custom Byte Stream
 * HTTP/HTTPS (only for specific purposes)
 
-### Add GameHammer Dependency to Project
+<a id="add-gamehammer-dependency-to-project"></a>
+### Add GameHammer Dependency to Project { #add-gamehammer-dependency-to-project }
 
 GameHammer is deployed via Maven, like GameAnvil. You can use GameHammer by adding the dependencies element in the pom.xml file as follows:
 
@@ -41,7 +40,8 @@ GameHammer is deployed via Maven, like GameAnvil. You can use GameHammer by addi
 <dependencies>
 ```
 
-### Create GameHammer jar file with Maven
+<a id="create-gamehammer-jar-file-with-maven"></a>
+### Create GameHammer jar file with Maven { #create-gamehammer-jar-file-with-maven }
 
 You can use GameHammer to create a jar file for the purpose of testing in the GameAnvil console after writing a test scenario.
 
@@ -65,12 +65,3 @@ Process finished with exit code 0
 
 You can see the built files in the newly created target directory.
 
-### How to Remove Unnecessary Debug Log
-
-When GameHammer is executed, DEBUG level logs related to the internal Library may occur. There is no exception to the action, but if you want to remove these logs, add the following to the VMOption.
-
-```
--Dio.netty.tryReflectionSetAccessible=true
---add-opens java.base/java.lang=ALL-UNNAMED
---add-opens java.base/jdk.internal.misc=ALL-UNNAMED
-```
